Gtk-3.20&3.22&3.24: [Lightdm-gtk-greeter] Fix jumping entry height showing CapsLock warning

--- a/gtk/sass/3.22/_3rd-party.scss
+++ b/gtk/sass/3.22/_3rd-party.scss
@@ -1252,6 +1252,10 @@ UnityPanelWidget,
       }
     }
 
+    entry { // prevent junmping when showing CapsLock warning
+      min-height: $widget_size;
+    }
+
     infobar.error { // notification revealer
       margin: 0 4px; // prevent unwanted overflow
       border: none;
